--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </section>
             <div class="current">
                 <div class="temp"><span>°c</span></div>
-                <div class="weather">Тренутно време</div>
+                <div class="weather">Тренутна прогноза</div>
             </div>
         </main>
     </div>
